--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 .container {
@@ -603,12 +604,26 @@ footer
 }
 
 .aboutUs-block__map {
+	height: 500px;
 	position: relative;
-	height: 910px;
 	width: 100%;
 	margin: 0 auto;
 	text-align: center;
 	align-items: center;
+}
+
+.aboutUs-block__map >*:last-child {
+	transition: 1s ease;
+	-webkit-box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.2);
+	-moz-box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.2);
+	box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.2);
+}
+
+
+.aboutUs-block__map >*:last-child:hover{
+	-webkit-box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.5);
+	box-shadow: 0px 0px 100px 32px rgba(0,0,0,0.5);
 }
 
 .aboutUs-block__map p {
